--- a/.github/workflows/test_ee.yml
+++ b/.github/workflows/test_ee.yml
@@ -33,26 +33,38 @@ jobs:
           sudo apt-get update
           sudo apt-get install tailscale
           sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH }} --hostname "node-client-ci-${{ env.KURRENT_VERSION }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.0
+
       - uses: actions/setup-node@v4
         with:
           node-version-file: .github/files/.nvmrc
+          cache: 'pnpm'
+
       - name: NodeJS version
         run: node -v
+
       - name: Login to Cloudsmith
         uses: docker/login-action@v3
         with:
           registry: docker.eventstore.com
           username: ${{ secrets.CLOUDSMITH_CICD_USER }}
           password: ${{ secrets.CLOUDSMITH_CICD_TOKEN }}
+
       - name: Install
-        run: npm install
-      - name: Build 
-        run: npm run build
+        run: pnpm install
+
+      - name: Build
+        run: pnpm run build
+
       - name: Run Tests
-        run: npm run test ${{ matrix.group.path }} --ci --run-in-band --forceExit
+        run: pnpm run test ${{ matrix.group.path }} --ci --run-in-band --forceExit
         env:
           KURRENT_IMAGE: eventstore-ee:${{ env.KURRENT_VERSION }}
           EVENTSTORE_CLOUD_ID: ${{ secrets.EVENTSTORE_CLOUD_ID }}
+
       - name: Disconnect from tailscale
         if: ${{ always() && matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
         run: sudo tailscale down
