--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,20 +55,31 @@ jobs:
           sudo apt-get update
           sudo apt-get install tailscale
           sudo tailscale up --authkey ${{ secrets.tailscale_auth }} --hostname "node-client-ci-${{ inputs.version }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.0
+
       - uses: actions/setup-node@v4
         with:
           node-version-file: .github/files/.nvmrc
+          cache: 'pnpm'
+
       - name: NodeJS version
         run: node -v
+
       - name: Install
-        run: npm install
+        run: pnpm install
+
       - name: Build 
-        run: npm run build
+        run: pnpm run build
+
       - name: Run Tests
-        run: npm run test ${{ matrix.group.path }} --ci --run-in-band --forceExit
+        run: pnpm run test ${{ matrix.group.path }} --ci --run-in-band --forceExit
         env:
           KURRENT_IMAGE: eventstore-ce:${{ inputs.version }}
           EVENTSTORE_CLOUD_ID: ${{ secrets.eventstore_cloud_id }}
+
       - name: Disconnect from tailscale
         if: ${{ always() && matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
         run: sudo tailscale down
