--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
   "name": "kurrent-node-client-repository",
   "private": true,
+  "version": "1.0.0",
+  "engines": {
+    "pnpm": ">=9.15"
+  },
+  "packageManager": "pnpm@9.15.0",
   "scripts": {
-    "build": "npm run build --workspaces",
-    "build:ts": "npm run build:ts --workspaces",
-    "build:watch": "npm run build:watch --workspaces --parallel",
-    "lint": "run-s -c lint:*",
+    "build": "pnpm -r build",
+    "build:ts": "pnpm -r build:ts",
+    "build:watch": "pnpm -r --parallel run build:watch",
+    "lint": "pnpm run \"/^lint:.*/\"",
     "lint:prettier": "prettier --check \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"packages/*/src/**/*.ts\"",
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
-    "clean": "npm run clean --workspaces",
-    "prepublishOnly": "run-s clean build test",
-    "test": "npm run test --workspaces --if-present",
-    "postinstall": "npm run build --workspaces"
+    "clean": "pnpm -r clean",
+    "prepublishOnly": "pnpm run clean && pnpm run build && pnpm run test",
+    "test": "pnpm -r --if-present run test --"
   },
   "author": "Event Store Limited",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/EventStore/EventStore-Client-NodeJS/issues"
+    "url": "https://github.com/EventStore/Kurrent-Client-NodeJS/issues"
   },
-  "homepage": "https://developers.eventstore.com/clients/grpc/getting-started?codeLanguage=NodeJS",
+  "homepage": "https://developers.kurrent.io/clients/grpc/getting-started?codeLanguage=NodeJS",
   "devDependencies": {
     "@tsconfig/node14": "^14.1.2",
-    "@types/node": "^16.18.67",
+    "@types/node": "^16.18.122",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
+    "semver": "^7.6.3",
     "typescript": "^4.9.5"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
