--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -1,20 +1,19 @@
 {
   "name": "@kurrent/db-client",
-  "version": "6.2.1",
-  "description": "NodeJS EventStoreDB version 20+ and uses gRPC as the communication protocol.",
+  "version": "1.0.0",
+  "description": "Kurrent gRPC NodeJS Client SDK",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "npm-run-all generate build:ts",
+    "build": "pnpm run \"/^generate:.*/\" && pnpm run build:ts",
     "build:ts": "tsc --build",
-    "build:watch": "npm-run-all generate build:ts-watch",
+    "build:watch": "pnpm run \"/^generate:.*/\" && pnpm run build:ts-watch",
     "build:ts-watch": "tsc --build --watch",
-    "generate": "run-s generate:*",
     "generate:sed-append": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*) \\[deprecated = true\\];/int64 \\$1 = \\$2 [deprecated = true, jstype = JS_STRING];/g\" ./protos/*",
     "generate:sed-insert": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
     "generate:folder": "shx mkdir -p ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
-    "clean": "run-s clean:*",
+    "clean": "pnpm run \"/^clean:.*/\"",
     "clean:generated": "shx rm -rf ./generated",
     "clean:dist": "shx rm -rf ./dist",
     "clean:buildinfo": "shx rm -rf *.tsbuildinfo"
@@ -25,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EventStore/EventStore-Client-NodeJS.git"
+    "url": "git+https://github.com/EventStore/Kurrent-Client-NodeJS.git"
   },
   "keywords": [
     "EventStore",
@@ -35,9 +34,9 @@
   "author": "Event Store Limited",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/EventStore/EventStore-Client-NodeJS/issues"
+    "url": "https://github.com/EventStore/Kurrent-Client-NodeJS/issues"
   },
-  "homepage": "https://developers.eventstore.com/clients/grpc/getting-started?codeLanguage=NodeJS",
+  "homepage": "https://developers.kurrent.io/clients/grpc/getting-started?codeLanguage=NodeJS",
   "publishConfig": {
     "access": "public"
   },
@@ -49,15 +48,14 @@
     "@types/debug": "^4.1.12",
     "@types/google-protobuf": "^3.15.12",
     "@types/node": "^22.10.2",
-    "debug": "^4.4.0",
     "google-protobuf": "^3.21.4",
-    "uuid": "^11.0.3"
+    "debug": "catalog:",
+    "uuid": "catalog:"
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
-    "npm-run-all": "^4.1.5",
     "shx": "^0.3.4"
   }
 }
