--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -45,6 +45,7 @@
     "@neon-rs/cli": "^0.1.82",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.11.16",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.3.3"
   },
   "dependencies": {
