--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -45,7 +45,7 @@
     "node": "^12.18.3 || >=14"
   },
   "dependencies": {
-    "@eventstore/db-client-bridge": "workspace:*",
+    "@eventstore/db-client-bridge": "file:../db-client-bridge",
     "@grpc/grpc-js": "^1.9.12",
     "@types/debug": "^4.1.12",
     "@types/google-protobuf": "^3.15.12",
