--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -9,9 +9,9 @@
     "cross-build": "tsc && cross build --message-format=json-render-diagnostics > cross.log",
     "postcargo-build": "neon dist < cargo.log",
     "postcross-build": "neon dist -m /target < cross.log",
-    "debug": "run-s cargo-build --",
-    "build": "run-s cargo-build -- --release",
-    "cross": "run-s cross-build -- --release",
+    "debug": "npm run cargo-build --",
+    "build": "npm run cargo-build -- --release",
+    "cross": "npm run cross-build -- --release",
     "prepack": "tsc &&neon update",
     "version": "neon bump --binaries platforms && git add .",
     "release": "gh workflow run release.yml -f dryrun=false -f version=patch",
