change a few things but we are gonna need a revamp.

--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   "workspaces": [
     "packages/*"
   ],
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
+  "dependencies": {
+    "@tsconfig/node16": "^16.1.3",
+    "@tsconfig/node18": "^18.2.4"
+  }
 }
