--- a/packages/db-client-bridge/tsconfig.json
+++ b/packages/db-client-bridge/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "node16",
     "declaration": true,
     "outDir": "lib",
   },
