--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -52,7 +52,7 @@
     "debug": "^4.3.2",
     "google-protobuf": "^3.21.2",
     "uuid": "^8.3.2",
-    "db-client-bridge": "file:../db-client-bridge"
+    "@eventstore/db-client-bridge": "file:../db-client-bridge"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
