--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -51,10 +51,10 @@
     "@types/node": "^16.18.67",
     "debug": "^4.3.2",
     "google-protobuf": "^3.21.2",
-    "uuid": "^8.3.2",
-    "@eventstore/db-client-bridge": "file:../db-client-bridge"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@eventstore/db-client-bridge": "file:../db-client-bridge",
     "@types/uuid": "^8.3.4",
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
