--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -54,6 +54,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@eventstore/db-client-bridge": "file:../db-client-bridge",
     "@types/uuid": "^8.3.4",
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
