--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -2,8 +2,7 @@
   "name": "@eventstore/db-client-bridge",
   "version": "0.1.0",
   "description": "A NodeJS binding for the EventStore Rust client",
-  "main": "./lib/index.cjs",
-  "type": "module",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "tsc &&cargo test",
     "cargo-build": "tsc &&cargo build --message-format=json-render-diagnostics > cargo.log",
@@ -23,16 +22,16 @@
   "exports": {
     ".": {
       "import": {
-        "types": "./lib/index.d.mts",
-        "default": "./lib/index.mjs"
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
       },
       "require": {
-        "types": "./lib/index.d.cts",
-        "default": "./lib/index.cjs"
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
       }
     }
   },
-  "types": "./lib/index.d.cts",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib/**/*.?({c,m}){t,j}s"
   ],
@@ -41,7 +40,7 @@
     "org": "@eventstore",
     "prefix": "db-client-bridge",
     "platforms": "common",
-    "load": "./src/load.cts"
+    "load": "./src/load.ts"
   },
   "devDependencies": {
     "@neon-rs/cli": "^0.1.82",
