--- a/packages/opentelemetry/package.json
+++ b/packages/opentelemetry/package.json
@@ -36,7 +36,7 @@
     "@opentelemetry/instrumentation": "^0.50.0"
   },
   "devDependencies": {
-    "@eventstore/db-client": "file:../db-client"
+    "@eventstore/db-client": "workspace:^"
   },
   "peerDependencies": {
     "@eventstore/db-client": "^6"
