ci: enable corepack

--- a/.github/workflows/build_and_lint.yml
+++ b/.github/workflows/build_and_lint.yml
@@ -53,6 +53,8 @@ jobs:
         uses: actions/checkout@v4
       - name: NodeJS version
         run: node -v
+      - name: Corepack
+        run: corepack enable
       - name: Install
         run: yarn
       - name: Build
