--- a/.github/workflows/build_and_lint.yml
+++ b/.github/workflows/build_and_lint.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Corepack
+        run: corepack enable
       - name: Install
         run: yarn
       - name: Linting
@@ -40,6 +42,8 @@ jobs:
           node-version-file: .github/files/.nvmrc
       - name: NodeJS version
         run: node -v
+      - name: Corepack
+        run: corepack enable
       - name: Install
         run: yarn
       - name: Build
