--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "eventstore-node-client-repository",
   "private": true,
   "scripts": {
-    "build": "yarn lerna run --stream build",
-    "build:ts": "yarn lerna run --stream build:ts",
-    "build:watch": "yarn lerna run build:watch --parallel",
-    "lint": "yarn lint:prettier && yarn lint:eslint",
+    "build": "nx run-many --target=build",
+    "build:ts": "nx run-many --target=build:ts",
+    "build:watch": "nx run-many --target=build:watch --parallel",
+    "lint": "nx run-many --target=lint:prettier && nx run-many --target=lint:eslint",
     "lint:prettier": "prettier --check \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"packages/*/src/**/*.ts\"",
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
-    "clean": "yarn lerna run --stream clean",
+    "clean": "nx run-many --target=clean",
     "prepublishOnly": "yarn clean && yarn build && yarn test",
-    "test": "yarn lerna run --stream test --"
+    "test": "nx run @eventstore/test:test"
   },
   "author": "Event Store Limited",
   "license": "Apache-2.0",
@@ -27,8 +27,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "lerna": "^6.6.2",
     "npm-run-all": "^4.1.5",
+    "nx": "20.1.3",
     "prettier": "^2.4.1",
     "typescript": "^5.7.3"
   },
@@ -38,5 +38,5 @@
   "dependencies": {
     "@tsconfig/node18": "^18.2.4"
   },
-  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
+  "packageManager": "yarn@4.6.0"
 }
