--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,14 +47,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Connect to tailscale
-        if: ${{ matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
-        run: |
-          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.gpg | sudo apt-key add -
-          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.list | sudo tee /etc/apt/sources.list.d/tailscale.list
-          sudo apt-get update
-          sudo apt-get install tailscale
-          sudo tailscale up --authkey ${{ secrets.tailscale_auth }} --hostname "node-client-ci-${{ inputs.version }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
+#      - name: Connect to tailscale
+#        if: ${{ matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
+#        run: |
+#          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.gpg | sudo apt-key add -
+#          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.list | sudo tee /etc/apt/sources.list.d/tailscale.list
+#          sudo apt-get update
+#          sudo apt-get install tailscale
+#          sudo tailscale up --authkey ${{ secrets.tailscale_auth }} --hostname "node-client-ci-${{ inputs.version }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
       - uses: actions/setup-node@v4
         with:
           node-version-file: .github/files/.nvmrc
@@ -70,7 +70,7 @@ jobs:
         run: yarn test ${{ matrix.group.path }} --ci --run-in-band --forceExit
         env:
           EVENTSTORE_IMAGE: eventstore-ce:${{ inputs.version }}
-          EVENTSTORE_CLOUD_ID: ${{ secrets.eventstore_cloud_id }}
-      - name: Disconnect from tailscale
-        if: ${{ always() && matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
-        run: sudo tailscale down
+#          EVENTSTORE_CLOUD_ID: ${{ secrets.eventstore_cloud_id }}
+#      - name: Disconnect from tailscale
+#        if: ${{ always() && matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
+#        run: sudo tailscale down
