--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -9,13 +9,17 @@
     "cross-build": "tsc &&cross build --message-format=json-render-diagnostics > cross.log",
     "postcargo-build": "neon dist < cargo.log",
     "postcross-build": "neon dist -m /target < cross.log",
-    "debug": "npm run cargo-build --",
-    "build": "npm run cargo-build -- --release",
-    "cross": "npm run cross-build -- --release",
+    "debug": "yarn run cargo-build --",
+    "build": "yarn run cargo-build -- --release",
+    "cross": "yarn run cross-build -- --release",
     "prepack": "tsc &&neon update",
     "version": "neon bump --binaries platforms && git add .",
     "release": "gh workflow run release.yml -f dryrun=false -f version=patch",
-    "dryrun": "gh workflow run publish.yml -f dryrun=true"
+    "dryrun": "gh workflow run publish.yml -f dryrun=true",
+    "clinic": "yarn run clinic:profile &&yarn run clinic:flame &&yarn run clinic:heap",
+    "clinic:profile": "clinic doctor -- node ./benchmark/benchmark.js",
+    "clinic:flame": "clinic flame -- node ./benchmark/benchmark.js",
+    "clinic:heap": "clinic heapprofiler -- node ./benchmark/benchmark.js",
   },
   "author": "Kurrent",
   "license": "Apache-2.0",
@@ -46,6 +50,8 @@
     "@neon-rs/cli": "^0.1.82",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.11.16",
+    "clinic": "^13.0.0",
+    "tinybench": "^3.1.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
