--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -9,17 +9,13 @@
     "cross-build": "tsc &&cross build --message-format=json-render-diagnostics > cross.log",
     "postcargo-build": "neon dist < cargo.log",
     "postcross-build": "neon dist -m /target < cross.log",
-    "debug": "yarn run cargo-build --",
-    "build": "yarn run cargo-build -- --release",
-    "cross": "yarn run cross-build -- --release",
+    "debug": "npm run cargo-build --",
+    "build": "npm run cargo-build -- --release",
+    "cross": "npm run cross-build -- --release",
     "prepack": "tsc &&neon update",
     "version": "neon bump --binaries platforms && git add .",
     "release": "gh workflow run release.yml -f dryrun=false -f version=patch",
-    "dryrun": "gh workflow run publish.yml -f dryrun=true",
-    "clinic": "yarn run clinic:profile &&yarn run clinic:flame &&yarn run clinic:heap",
-    "clinic:profile": "clinic doctor -- node ./benchmark/benchmark.js",
-    "clinic:flame": "clinic flame -- node ./benchmark/benchmark.js",
-    "clinic:heap": "clinic heapprofiler -- node ./benchmark/benchmark.js"
+    "dryrun": "gh workflow run publish.yml -f dryrun=true"
   },
   "author": "Kurrent",
   "license": "Apache-2.0",
