--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -4,7 +4,7 @@
   "description": "A NodeJS binding for the EventStore Rust client",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "tsc &&cargo test",
+    "test": "node --test ./test",
     "cargo-build": "tsc &&cargo build --message-format=json-render-diagnostics > cargo.log",
     "cross-build": "tsc &&cross build --message-format=json-render-diagnostics > cross.log",
     "postcargo-build": "neon dist < cargo.log",
@@ -15,7 +15,8 @@
     "prepack": "tsc &&neon update",
     "version": "neon bump --binaries platforms && git add .",
     "release": "gh workflow run release.yml -f dryrun=false -f version=patch",
-    "dryrun": "gh workflow run publish.yml -f dryrun=true"
+    "dryrun": "gh workflow run publish.yml -f dryrun=true",
+    "benchmark": "node ./benchmark/b1"
   },
   "author": "Kurrent",
   "license": "Apache-2.0",
