--- a/package.json
+++ b/package.json
@@ -2,27 +2,27 @@
   "name": "kurrent-node-client-repository",
   "private": true,
   "version": "1.0.0",
-  "engines": {
-    "pnpm": ">=9.15"
-  },
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "yarn@4.6.0",
   "scripts": {
-    "build": "pnpm -r build",
-    "build:ts": "pnpm -r build:ts",
-    "build:watch": "pnpm -r --parallel run build:watch",
-    "lint": "pnpm run \"/^lint:.*/\"",
+    "build": "nx run-many --target=build",
+    "build:ts": "nx run-many --target=build:ts",
+    "build:watch": "nx run-many --target=build:watch --parallel",
+    "lint": "nx run-many --target=lint:prettier && nx run-many --target=lint:eslint",
     "lint:prettier": "prettier --check \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"packages/*/src/**/*.ts\"",
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
-    "clean": "pnpm -r clean",
-    "prepublishOnly": "pnpm run clean && pnpm run build && pnpm run test",
-    "test": "pnpm -r --if-present run test --"
+    "clean": "nx run-many --target=clean",
+    "prepublishOnly": "yarn clean && yarn build && yarn test",
+    "test": "nx run @eventstore/test:test"
   },
   "author": "Event Store Limited",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/EventStore/Kurrent-Client-NodeJS/issues"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "homepage": "https://developers.kurrent.io/clients/grpc/getting-started?codeLanguage=NodeJS",
   "devDependencies": {
     "@tsconfig/node14": "^14.1.2",
