--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -5,15 +5,15 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "pnpm run \"/^generate:.*/\" && pnpm run build:ts",
+    "build": "yarn generate && yarn build:ts",
     "build:ts": "tsc --build",
-    "build:watch": "pnpm run \"/^generate:.*/\" && pnpm run build:ts-watch",
+    "build:watch": "yarn \"/^generate:.*/\" && pnpm run build:ts-watch",
     "build:ts-watch": "tsc --build --watch",
     "generate:sed-append": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*) \\[deprecated = true\\];/int64 \\$1 = \\$2 [deprecated = true, jstype = JS_STRING];/g\" ./protos/*",
     "generate:sed-insert": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
     "generate:folder": "shx mkdir -p ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
-    "clean": "pnpm run \"/^clean:.*/\"",
+    "clean": "yarn clean:generated && yarn clean:dist && yarn clean:buildinfo",
     "clean:generated": "shx rm -rf ./generated",
     "clean:dist": "shx rm -rf ./dist",
     "clean:buildinfo": "shx rm -rf *.tsbuildinfo"
@@ -48,14 +48,15 @@
     "@types/debug": "^4.1.12",
     "@types/google-protobuf": "^3.15.12",
     "@types/node": "^22.10.2",
+    "debug": "^4.4.0",
     "google-protobuf": "^3.21.4",
-    "debug": "catalog:",
-    "uuid": "catalog:"
+    "uuid": "11.0.3"
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
+    "nx": "20.1.3",
     "shx": "^0.3.4"
   }
 }
