--- a/packages/opentelemetry/package.json
+++ b/packages/opentelemetry/package.json
@@ -6,11 +6,11 @@
   "types": "./dist/index.d.ts",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "pnpm run build:ts",
+    "build": "yarn build:ts",
     "build:ts": "tsc --build",
     "build:watch": "pnpm run build:ts-watch",
     "build:ts-watch": "tsc --build --watch",
-    "clean": "pnpm run \"/^clean:.*/\"",
+    "clean": "yarn clean:dist && yarn clean:buildinfo",
     "clean:dist": "shx rm -rf ./dist",
     "clean:buildinfo": "shx rm -rf *.tsbuildinfo"
   },
