--- a/package.json
+++ b/package.json
@@ -25,15 +25,20 @@
   ],
   "homepage": "https://developers.kurrent.io/clients/grpc/getting-started?codeLanguage=NodeJS",
   "devDependencies": {
-    "@tsconfig/node14": "^14.1.2",
-    "@types/node": "^16.18.122",
+    "@eventstore/db-client": "^6.2.1",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/node": "18.19.76",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "nx": "20.1.3",
     "prettier": "^2.8.8",
     "semver": "^7.6.3",
-    "typescript": "^4.9.5"
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@kurrent/db-client": "workspace:^"
   }
 }
