--- a/.github/workflows/test_ee.yml
+++ b/.github/workflows/test_ee.yml
@@ -17,7 +17,6 @@ jobs:
         group:
           - name: plugins
             path: ./src/plugins
-            tailscale: true
     env:
       # GitHub only passes secrets to the main repo, so we need to skip some things if they are unavailable
       SECRETS_AVAILABLE: ${{ secrets.EVENTSTORE_CLOUD_ID != null }}
@@ -25,26 +24,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Connect to tailscale
-        if: ${{ matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
-        run: |
-          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.gpg | sudo apt-key add -
-          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.list | sudo tee /etc/apt/sources.list.d/tailscale.list
-          sudo apt-get update
-          sudo apt-get install tailscale
-          sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH }} --hostname "node-client-ci-${{ env.KURRENT_VERSION }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9.15.0
 
       - uses: actions/setup-node@v4
         with:
           node-version-file: .github/files/.nvmrc
-          cache: 'pnpm'
 
       - name: NodeJS version
         run: node -v
+
+      - name: Corepack
+        run: corepack enable
 
       - name: Login to Cloudsmith
         uses: docker/login-action@v3
@@ -54,17 +43,15 @@ jobs:
           password: ${{ secrets.CLOUDSMITH_CICD_TOKEN }}
 
       - name: Install
-        run: pnpm install
+        run: yarn
+
+      - name: Corepack
+        run: corepack enable
 
       - name: Build
-        run: pnpm run build
+        run: yarn build
 
       - name: Run Tests
-        run: pnpm run test ${{ matrix.group.path }} --ci --run-in-band --forceExit
+        run: yarn test ${{ matrix.group.path }} --ci --run-in-band --forceExit
         env:
           KURRENT_IMAGE: eventstore-ee:${{ env.KURRENT_VERSION }}
-          EVENTSTORE_CLOUD_ID: ${{ secrets.EVENTSTORE_CLOUD_ID }}
-
-      - name: Disconnect from tailscale
-        if: ${{ always() && matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
-        run: sudo tailscale down
