--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "nx run-many --target=build",
     "build:ts": "nx run-many --target=build:ts",
     "build:watch": "nx run-many --target=build:watch --parallel",
-    "lint": "nx run-many --target=lint:prettier && nx run-many --target=lint:eslint",
-    "lint:prettier": "prettier --check \"packages/*/src/**/**/!(*.d).{ts,json}\"",
-    "lint:eslint": "eslint \"packages/*/src/**/*.ts\"",
+    "lint": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\" && eslint packages/*/src --ext .ts --no-error-on-unmatched-pattern",
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "clean": "nx run-many --target=clean",
     "prepublishOnly": "yarn clean && yarn build && yarn test",
@@ -25,18 +23,17 @@
   ],
   "homepage": "https://developers.kurrent.io/clients/grpc/getting-started?codeLanguage=NodeJS",
   "devDependencies": {
-    "@eventstore/db-client": "^6.2.1",
     "@tsconfig/node18": "^18.2.4",
     "@types/node": "18.19.76",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "nx": "20.1.3",
     "prettier": "^2.8.8",
     "semver": "^7.6.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@kurrent/db-client": "workspace:^"
