--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -38,30 +38,13 @@ jobs:
         run: yarn nx run @kurrent/db-client-bridge:loadEvents
 
       - name: Run Benchmarks
-        run: yarn nx run @kurrent/db-client-bridge:benchmark | tee benchmark-output.txt
+        run: yarn nx run @kurrent/db-client-bridge:benchmark | tee benchmark-bridge-client-output-${{ matrix.os }}.txt
 
-      - name: Add PR Comment with Results
-        if: github.event_name == 'pull_request'
-        run: |
-          BENCHMARK_RESULTS=$(cat benchmark-output.txt)
-          echo "🚀 **Benchmark Results (${{ matrix.os }})**" > pr-comment.txt
-          echo '```' >> pr-comment.txt
-          echo "$BENCHMARK_RESULTS" >> pr-comment.txt
-          echo '```' >> pr-comment.txt
-
-      - name: Post Comment
-        if: github.event_name == 'pull_request'
-        uses: mshick/add-pr-comment@v2
+      - name: Upload Benchmark Results
+        uses: actions/upload-artifact@v4
         with:
-          message-path: pr-comment.txt
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Save Benchmark Summary
-        run: |
-          echo "## 🚀 Benchmark Results (${{ matrix.os }})" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          cat benchmark-output.txt >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          name: benchmark-results
+          path: benchmark-bridge-client-output-${{ matrix.os }}.txt
 
       - name: Shutdown KurrentDB
         run: docker compose -f packages/db-client-bridge/docker-compose.yml down
