--- a/packages/db-client-bridge/package.json
+++ b/packages/db-client-bridge/package.json
@@ -15,9 +15,7 @@
     "prepack": "tsc &&neon update",
     "version": "neon bump --binaries platforms && git add .",
     "release": "gh workflow run release.yml -f dryrun=false -f version=patch",
-    "dryrun": "gh workflow run publish.yml -f dryrun=true",
-    "benchmark": "node ./benchmark/b1",
-    "loadEvents": "node ./benchmark/load"
+    "dryrun": "gh workflow run publish.yml -f dryrun=true"
   },
   "author": "Kurrent",
   "license": "Apache-2.0",
@@ -45,13 +43,14 @@
     "load": "./src/load.ts"
   },
   "devDependencies": {
-    "@eventstore/db-client": "^6.2.1",
     "@neon-rs/cli": "^0.1.82",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.11.16",
     "clinic": "^13.0.0",
-    "tinybench": "^3.1.1",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "dependencies": {
     "@neon-rs/load": "^0.1.82"
