--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "packageManager": "yarn@4.6.0",
   "scripts": {
-    "build": "nx run-many --target=build",
-    "build:ts": "nx run-many --target=build:ts",
+    "build": "nx run-many --target=build --verbose",
+    "build:ts": "nx run-many --target=build:ts --verbose",
     "build:watch": "nx run-many --target=build:watch --parallel",
     "lint": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\" && eslint packages/*/src --ext .ts --no-error-on-unmatched-pattern",
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
@@ -33,8 +33,5 @@
     "prettier": "^2.8.8",
     "semver": "^7.6.3",
     "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@kurrent/kurrentdb-client": "workspace:^"
   }
 }
