--- a/packages/bridge/crates/bridge/Cargo.toml
+++ b/packages/bridge/crates/bridge/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "db-client-bridge"
+name = "bridge"
 version = "0.1.0"
 description = "A NodeJS binding for the Kurrent Rust client"
-authors = ["Kurrent"]
+authors = ["William"]
 license = "Apache-2.0"
 edition = "2021"
 exclude = ["index.node"]
