--- a/packages/opentelemetry/package.json
+++ b/packages/opentelemetry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kurrent/opentelemetry",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.4",
   "description": "Kurrent NodeJS Client SDK interceptors for tracing with OpenTelemetry",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -36,10 +36,7 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/instrumentation": "^0.56.0"
   },
-  "peerDependencies": {
-    "@kurrent/kurrentdb-client": "^1"
-  },
   "devDependencies": {
-    "@kurrent/kurrentdb-client": "workspace:^"
+    "@kurrent/kurrentdb-client": "file:../db-client"
   }
 }
