--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -54,7 +54,7 @@
     "uuid": "11.0.3"
   },
   "devDependencies": {
-    "@kurrent/bridge": "file:../bridge",
+    "@kurrent/bridge": "portal:../bridge",
     "@types/uuid": "^10.0.0",
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
